# certification

./: README.md
cert/: app.vue  nuxt.config.ts  package-lock.json  package.json
cert-server/: .gitignore  Cargo.toml  logs
cert-server/src/: database.rs  logger.rs  main.rs
cert-server/src/models/: book.rs  loan.rs  media.rs  mod.rs  user.rs
cert-server/src/routes/: book.rs  loan.rs  mod.rs  user.rs
cert/components/: rd-backdrop.vue  rd-body-five.vue  rd-body-four.vue  rd-body-one.vue  rd-body-six.vue  rd-body-three.vue  rd-body-two.vue  rd-book-panel.vue  rd-book.vue  rd-footer.vue  rd-header-one.vue  rd-header-two.vue  rd-image-slider.vue  rd-image.vue  rd-input-button-attraction-small.vue  rd-input-button-attraction.vue  rd-input-button-floating.vue  rd-input-button-small.vue  rd-input-button.vue  rd-input-date.vue  rd-input-image.vue  rd-input-search.vue  rd-input-select.vue  rd-input-switch.vue  rd-input-text.vue  rd-input-textarea.vue  rd-loan-panel.vue  rd-popover.vue  rd-product.vue  rd-svg.vue  rd-user-add-panel.vue  rd-user-login-panel.vue
cert/composables/: use-book.ts  use-loan.ts  use-user.ts
cert/middleware/: content.ts
cert/plugins/: fetch.ts  helpers.ts
cert/public/: config.js
cert/types/: book.ts  general.ts  loan.ts  user.ts
