[package]
name = "cert-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-multipart = "0.6.0"
actix-web = "4.0.0"
chrono = "0.4.24"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
mongodb = "2.5.0"
pwhash = "1.0.0"
serde = "1.0.160"
serde_json = "1.0.103"
tokio = { version = "1.34.0", features = ["full"] }
